--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+# Russian localization for Wildfrost (by Nitablade)
 EN:
 
 This is my own Russian localization for Wildfrost (game version 1.2.1)
@@ -5,3 +6,10 @@ This is my own Russian localization for Wildfrost (game version 1.2.1)
 RU:
 ## Краткое описание:
 Это моя авторская локализация на русский язык для Wildfrost (релиз 1.2.1)
+
+Данная модификация работает только с официальной копией игры Wildfrost, доступной в Steam. Модификация никак не влияет на получений достижений в игре.
+Модификация использует шрифт, отличный от оригинального. При желании - вы можете заменить файл шрифта Ely Rounded Bold.ttf на любой другой с сохранением исходного имени.
+
+## Как установить:
+1) Прежде всего, вам нужно присоединиться к [специальной группе в Steam](https://steamcommunity.com/groups/WildfrostModTesters), без выполнения этого шага вы не увидите вкладку ```Мастерская``` для Wildfrost в Steam.
+2) Далее вам нужно переключить игру на ```modding``` ветку: ПКМ по **Wildfrost** в Steam - ```Свойства... - Бета-версии```, ввести код ```gigisworkshop``` и сверху выбрать ветку **modding - for testing mod support**.
